--- a/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
@@ -674,7 +674,7 @@
                                                     @{
 
                                                         string uState = item.user.user_personalInfor.FirstOrDefault().u_state ?? "???";
-                                                        string countryName = item.user.user_personalInfor.FirstOrDefault().country_id ?? "???";
+                                                        string countryName = item.user.user_personalInfor.FirstOrDefault().country ?? "???";
                                                         string uCity = item.user.user_personalInfor.FirstOrDefault().u_city ?? "???";
                                                     }
                                                     <p>@uCity ,  @uState , @countryName</p>
@@ -1030,7 +1030,7 @@
                                                 @{
 
                                                     string uState = item.user.user_personalInfor.FirstOrDefault().u_state ?? "???";
-                                                    string countryName = item.user.user_personalInfor.FirstOrDefault().country_id ?? "???";
+                                                    string countryName = item.user.user_personalInfor.FirstOrDefault().country ?? "???";
                                                     string uCity = item.user.user_personalInfor.FirstOrDefault().u_city ?? "???";
 
                                                 }
