--- a/PPl3/Areas/Admin/Views/HomeAdmin/revenue.cshtml
+++ b/PPl3/Areas/Admin/Views/HomeAdmin/revenue.cshtml
@@ -146,7 +146,15 @@
                                             @{
                                                 string currentyear = DateTime.Now.ToString("yyyy");
                                                 string yearbecomehost = p_user.day_become_host.Value.ToString("yyyy");
-                                                for (int i = int.Parse(currentyear); i >= int.Parse(yearbecomehost); i--)
+                                                string minyear = DateTime.Now.ToString("yyyy");
+                                                foreach (var item in db.transactions.Where(item => item.transaction_status == 1 && item.receiver_id == p_user.id).ToList())
+                                                {
+                                                    if (int.Parse(minyear) > int.Parse(item.transfer_on.Value.ToString("yyyy")))
+                                                    {
+                                                        minyear = item.transfer_on.Value.ToString("yyyy");
+                                                    }
+                                                }
+                                                for (int i = int.Parse(currentyear); i >= int.Parse(minyear); i--)
                                                 {
                                                     <option value="@i">@i</option>
                                                 }
@@ -508,15 +516,15 @@
                                                     string address = "";
                                                     if (tmp.user1.user_personalInfor.FirstOrDefault() != null)
                                                     {
-                                                        if (tmp.user1.user_personalInfor.FirstOrDefault().country_id != null)
+                                                        if (tmp.user1.user_personalInfor.FirstOrDefault().country != null)
                                                         {
-                                                            address = tmp.user1.user_personalInfor.FirstOrDefault().country_id;
+                                                            address = tmp.user1.user_personalInfor.FirstOrDefault().country;
                                                             if (tmp.user1.user_personalInfor.FirstOrDefault().u_state != null)
                                                             {
-                                                                address = tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country_id;
+                                                                address = tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country;
                                                                 if (tmp.user1.user_personalInfor.FirstOrDefault().u_city != null)
                                                                 {
-                                                                    address = tmp.user1.user_personalInfor.FirstOrDefault().u_city + ", " + tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country_id;
+                                                                    address = tmp.user1.user_personalInfor.FirstOrDefault().u_city + ", " + tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country;
                                                                 }
                                                             }
                                                         }
