--- a/PPl3/Areas/Host/Views/HomeHost/revenue.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/revenue.cshtml
@@ -44,7 +44,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/ExtraFiles/assets/css/gird.css">
-    <link rel="stylesheet" href="~/ExtraFiles/assets/css/revenue.css">
+    <link rel="stylesheet" href="~/ExtraFiles/assets/css/revenue.css?v=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         .hide {
@@ -269,10 +269,19 @@
                                         <p>Statistics Of The Month</p>
 
                                         <select name="" id="by_year">
+                                            @*năm cuối của transaction cũ nhất*@
                                             @{
                                                 string currentyear = DateTime.Now.ToString("yyyy");
                                                 string yearbecomehost = p_user.day_become_host.Value.ToString("yyyy");
-                                                for (int i = int.Parse(currentyear); i >= int.Parse(yearbecomehost); i--)
+                                                string minyear = DateTime.Now.ToString("yyyy");
+                                                foreach(var item in db.transactions.Where(item => item.transaction_status == 1 && item.receiver_id == p_user.id).ToList())
+                                                {
+                                                    if(int.Parse(minyear) > int.Parse(item.transfer_on.Value.ToString("yyyy")))
+                                                    {
+                                                        minyear = item.transfer_on.Value.ToString("yyyy");
+                                                    }
+                                                }
+                                                for (int i = int.Parse(currentyear); i >= int.Parse(minyear); i--)
                                                 {
                                                     <option value="@i">@i</option>
                                                 }
@@ -686,15 +695,15 @@
                                                     string address = "";
                                                     if (tmp.user1.user_personalInfor.FirstOrDefault() != null)
                                                     {
-                                                        if (tmp.user1.user_personalInfor.FirstOrDefault().country_id != null)
+                                                        if (tmp.user1.user_personalInfor.FirstOrDefault().country != null)
                                                         {
-                                                            address = tmp.user1.user_personalInfor.FirstOrDefault().country_id;
+                                                            address = tmp.user1.user_personalInfor.FirstOrDefault().country;
                                                             if (tmp.user1.user_personalInfor.FirstOrDefault().u_state != null)
                                                             {
-                                                                address = tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country_id;
+                                                                address = tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country;
                                                                 if (tmp.user1.user_personalInfor.FirstOrDefault().u_city != null)
                                                                 {
-                                                                    address = tmp.user1.user_personalInfor.FirstOrDefault().u_city + ", " + tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country_id;
+                                                                    address = tmp.user1.user_personalInfor.FirstOrDefault().u_city + ", " + tmp.user1.user_personalInfor.FirstOrDefault().u_state + ", " + tmp.user1.user_personalInfor.FirstOrDefault().country;
                                                                 }
                                                             }
                                                         }
