--- a/PPl3/ExtraFiles/assets/css/editProfile.css
+++ b/PPl3/ExtraFiles/assets/css/editProfile.css
@@ -160,8 +160,8 @@ html {
 
 @media screen and (max-width: 768px) {
     .notification_badge {
-        top: -5px;
-        right: -5px;
+        top: -11px;
+        right: -13px;
     }
 }
 
@@ -367,6 +367,7 @@ html {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .open_btn {
@@ -387,7 +388,7 @@ html {
         position: absolute;
         top: 0;
         left: 0;
-        margin-top: 3px;
+        margin-top: 1px;
         margin-left: 3px;
         padding: 9px 12px;
         border-radius: 50%;
