--- a/PPl3/Views/Shared/_LayoutPage1.cshtml
+++ b/PPl3/Views/Shared/_LayoutPage1.cshtml
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZf3I4TkruOraYvnm7WbRSU3qYV2Lkj3_0w3wfgQrApnsvo-yspjafW8P57Demy0zgf6U&usqp=CAU">
     <link href="~/ExtraFiles/assets/css/book_room.css?v=1" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/gird.css?v=2" rel="stylesheet" />
-    <link href="~/ExtraFiles/assets/css/style_v1.css?v=6" rel="stylesheet" />
+    <link href="~/ExtraFiles/assets/css/style_v1.css?v=7" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/seller_profile.css?v=3" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/Sign_Log_v1.css?v=2" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
@@ -151,7 +151,7 @@
     <script src="~/ExtraFiles/JS/first_header.js?v=1"></script>
     <script src="~/ExtraFiles/JS/imgSlide.js?v=2"></script>
     <script src="~/ExtraFiles/JS/main_v1.js?v=2"></script>
-    <script src="~/ExtraFiles/JS/room_classifi_v1.js?v=1"></script>>
+    <script src="~/ExtraFiles/JS/room_classifi_v1.js?v=1"></script>
     <script src="~/ExtraFiles/JS/seller_profile.js?v=2"></script>
     <script src="~/ExtraFiles/JS/Sign_Log_v1.js?v=1"></script>
     <script src="~/Scripts/jquery-3.7.1.js"></script>
